--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
+    "react-share": "^4.4.1",
     "react-spinners": "^0.13.6",
     "sweetalert2": "^11.6.10",
     "web-vitals": "^2.1.4"
